--- a/os/.cargo/config
+++ b/os/.cargo/config
@@ -5,3 +5,5 @@ target = "riscv64gc-unknown-none-elf"
 rustflags = [
     "-Clink-arg=-Tsrc/linker.ld", "-Cforce-frame-pointers=yes"
 ]
+# [profile.realease]
+# debug=true
